# divitrek

./: Dockerfile  LICENSE  docker-compose.yml  env.example  pyproject.toml
data/: Fidelity_Full_History_20240701_20251001.csv  current_positions.xlsx
divitrek/app/: main.py
divitrek/app/api/routes/: assets.py
divitrek/app/core/: config.py  db.py
divitrek/app/models/: models.py
divitrek/frontend/: streamlit_app.py
scripts/: build_dividend_tracker_skeleton.py  dividends_nav_etf_updater.py  generate_spreadsheet.py  prices_updater.py
